Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-01-14 (SVN):
    * libs/timidity/instrum.c (load_instrument): allocate sp data with 2
      additional bytes. Timidity++ changelog from 1999-10-26 notes this
      patch by E.A.Welsh as: "It is possible that (OFS>>FRACTION_BITS)+1
      will yield a value which is 1 beyond the length of the sample.
      This happens when OFS < data_length, but (OFS>>FRACTION_BITS) ==
      (data_length>>FRACTION_BITS)." This fixes a valgrind error report
      for an invalid read of 2 bytes in resample.c:rs_plain().

2013-01-12 (SVN):
    * snd_wildmidi.c: added "/etc/wildmidi" to cfgfile[], which is where
      debian seems to install wildmidi.cfg.

2013-01-11 (SVN):
    * snd_mix.c (SND_InitScaletable): fixed an off-by-one mistake in the
      signed char conversion.

2013-01-11 (SVN):
    * docs/COMPILE: added a warning note to avoid buggy gcc versions,
      giving specifically gcc-4.1.0 and gcc-4.1.1 as examples.  updated
      tested clang versions.

2013-01-11 (SVN):
    * Makefiles, AROS builds: uncomment GL_LINK variable and compile the
      native opengl builds using LINK_GL_LIBS=yes.

2013-01-11 (SVN):
    * pr_exec.c (PR_ExecuteProgram): when interpreting a version6 progs,
      calculate the jump offset using a top-level local int32 variable.
      this way, gcc seems to refactor and output smaller code.

2013-01-11 (SVN):
    * pr_exec.c (PR_ExecuteProgram): when interpreting a version6 progs,
      calculate the jump offset not by first decrementing a, b or c and
      then casting the result to signed short, but by casting first to
      signed short and then decrementing. the former gives wrong result
      for -32768 (or 32768), a corner case I couldn't hit in real world
      yet. this was possibly a parenthesis typo by Pa3PyX back in 2003,
      or some kind of thinko in an already confusing case.
    * updated version date stamp to 2013-01-11.

2013-01-10 (SVN):